# LocaFetch

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  indexer.rs  lib.rs  main.rs  settings.rs  watcher.rs
src/components/: ResultItem.tsx  SearchView.tsx  SettingsView.tsx
src/lib/: api.ts
