[package]
name = "locafetch"
version = "0.1.0"
description = "LocaFetch — fast file search"
authors = []
edition = "2021"

[lib]
name = "locafetch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled-full"] }
walkdir = "2"
tokio = { version = "1", features = ["full"] }
arboard = "3"
notify = "6"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
winreg = "0.52"
